cleanup and fixes for v23

--- a/app/src/main/res/layout/tab_about.xml
+++ b/app/src/main/res/layout/tab_about.xml
@@ -53,7 +53,7 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/ripple"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:minHeight="48dp"
@@ -94,7 +94,7 @@
                     android:id="@+id/changelogView"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/ripple"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:minHeight="48dp"
@@ -122,7 +122,7 @@
                     android:id="@+id/developersView"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/ripple"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:minHeight="48dp"
@@ -158,7 +158,7 @@
                     android:id="@+id/licensesView"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/ripple"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:minHeight="@dimen/md_listitem_height"
@@ -187,7 +187,7 @@
                     android:id="@+id/translatorsView"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/ripple"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:minHeight="48dp"
@@ -229,7 +229,7 @@
                     android:id="@+id/sourceCodeView"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/ripple"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:minHeight="48dp"
