--- a/app/src/main/res/layout/tab_support.xml
+++ b/app/src/main/res/layout/tab_support.xml
@@ -31,7 +31,7 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/ripple"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:minHeight="48dp"
@@ -74,7 +74,7 @@
                     android:id="@+id/installerSupportView"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/ripple"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:minHeight="48dp"
@@ -110,7 +110,7 @@
                     android:id="@+id/faqView"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/ripple"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:minHeight="48dp"
@@ -146,7 +146,7 @@
                     android:id="@+id/donateView"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/ripple"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:minHeight="48dp"
