--- a/app/src/main/res/layout/list_item_module.xml
+++ b/app/src/main/res/layout/list_item_module.xml
@@ -10,11 +10,11 @@
     android:layout_marginLeft="8dip"
     android:layout_marginRight="8dip"
     android:layout_marginTop="3dip"
-    android:elevation="2dip"
-    android:foreground="?selectableItemBackground"
+    android:foreground="?android:attr/selectableItemBackground"
     android:minHeight="?android:attr/listPreferredItemHeight"
     card_view:cardBackgroundColor="?attr/list_download_item_color"
-    card_view:cardCornerRadius="2dip">
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <TextView
+                <TextView
                     android:id="@+id/title"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
