--- a/app/src/main/res/menu/menu_download_details.xml
+++ b/app/src/main/res/menu/menu_download_details.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools">
+
+    <item
+        android:id="@+id/menu_bookmark"
+        app:showAsAction="ifRoom|withText"
+        tools:ignore="MenuTitle"/>
 
     <item
         android:id="@+id/menu_share"
