bookmark feature (pt 2)

--- a/app/src/main/res/menu/menu_modules.xml
+++ b/app/src/main/res/menu/menu_modules.xml
@@ -3,6 +3,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/bookmarks"
+        android:icon="@drawable/ic_bookmark"
+        android:title="@string/bookmarks"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/export"
         android:title="@string/export_"
         app:showAsAction="never">
