--- a/app/src/main/res/layout/list_item_download.xml
+++ b/app/src/main/res/layout/list_item_download.xml
@@ -16,7 +16,7 @@
             android:id="@android:id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceListItem"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@android:id/text2"
