--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -71,6 +71,11 @@
             android:key="nav_bar"
             android:title="@string/nav_bar_coloration"/>
 
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="colored_notification"
+            android:title="@string/notification_coloration"/>
+
         <de.robv.android.xposed.installer.widget.IntegerListPreference
             android:defaultValue="0"
             android:entries="@array/default_view_texts"
