--- a/app/src/main/res/menu/context_menu_modules_bookmark.xml
+++ b/app/src/main/res/menu/context_menu_modules_bookmark.xml
@@ -2,6 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/install_bookmark"
+        android:title="@string/download_view_install"/>
+
+    <item
+        android:id="@+id/install_remove_bookmark"
+        android:title="@string/install_remove"/>
+
+    <item
+        android:id="@+id/download_bookmark"
+        android:title="@string/tabDownload"/>
+
+    <item
+        android:id="@+id/download_remove_bookmark"
+        android:title="@string/download_remove"/>
+
+    <item
         android:id="@+id/remove"
         android:title="@string/remove_bookmark"/>
 
