--- a/app/src/main/res/menu/menu_download_details.xml
+++ b/app/src/main/res/menu/menu_download_details.xml
@@ -20,4 +20,9 @@
         android:title="@string/menuReload"
         app:showAsAction="ifRoom|withText"/>
 
+    <item
+        android:id="@+id/ignoreUpdate"
+        android:checkable="true"
+        android:title="@string/ignore_updates"/>
+
 </menu>
