--- a/app/src/main/res/menu/menu_logs.xml
+++ b/app/src/main/res/menu/menu_logs.xml
@@ -9,19 +9,27 @@
         app:showAsAction="ifRoom|withText"/>
 
     <item
-        android:id="@+id/menu_scroll_top"
-        android:icon="@drawable/ic_scroll_top"
-        android:title="@string/scroll_top"
-        app:showAsAction="ifRoom|withText"/>
-
-    <item
         android:id="@+id/menu_save"
         android:title="@string/menuSaveToSd"
         app:showAsAction="never"/>
+
     <item
         android:id="@+id/menu_send"
         android:title="@string/menuSend"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/menu_scroll_top"
+        android:icon="@drawable/ic_scroll_top"
+        android:title="@string/scroll_top"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/menu_scroll_down"
+        android:icon="@drawable/ic_scroll_down"
+        android:title="@string/scroll_bottom"
+        app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/menu_clear"
         android:title="@string/menuClearLog"
